@@ -56,6 +56,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [fix] VAC2 on/off state is recovered from the TX profile when rx2 is enabled
 - [fix] pulse on waterfall has been minimised when using NF compensation with the waterfall AGC
 - [fix] cwu above 10mhz will now be used by tciserver on restart if configured to do so
+- [fix] s-add/att state will behave as expected when the adcs are linked, and rx2 was previously save with a different state to rx1. If the adc's are linked then RX2 will use setting from RX1
 
 ## v2.10.3.8 - Change Log
 - [fix] maintain delta checkbox now greyed if adjust min to noise floor is unchecked
